--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,9 +16,10 @@ services:
     volumes:
       - postgres_data:/var/lib/postgresql/data/
     environment:
-      DB: ${DB}
-      USER: ${USER}
-      PASSWORD: ${PASSWORD}
+      POSTGRES_DB: ${DB_NAME}
+      POSTGRES_USER: ${DB_USER}
+      POSTGRES_PASSWORD: ${DB_PASSWORD}
+
     env_file:
       - .env
 
